Update the layout to follow example design

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 <body>
     <header>
 
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+
+        <div id="logo"><a href="index.html"><img src="./assets/logo.jpg" alt="Save Our Planet Logo"></a></div>
+
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#program"></a>Program</li>
+                <li><a href=""></a>Join</li>
+                <li><a href=""></a>Sponsor</li>
+                <li><a href=""></a>News</li>
+                <li><a href=""></a>SOP Campaign</li>
+            </ul>
+        </nav>
+        
 
     </header>
     <main>
@@ -27,17 +44,68 @@
             <p>@ Conference Hall, Paris</p>
         </section>
 
-        <section>
+        <section id="program">
             <h3>Main Program</h3>
             <hr>
-            
-
+            <div class="grid-container">
+                <div class="lecture">
+                    <img src="./assets/lecture.png" alt="Lecture Icon on IconScout">
+                    <h3>Lecture</h3>
+                    <p>Listen to the speakers from various countries about the necessary steps and actions the world has to take in order to fight climate change.</p>
+                </div>
+                <div class="exhibition">
+                    <img src="./assets/whiteboard.png" alt="Explaining concepts on a board">
+                    <h3>Exhibition</h3>
+                    <p>Appreciate various efforts made so far towards the fight against climate change.</p>
+                </div>
+                <div class="forum">
+                    <img src="./assets/speech-bubble.png" alt="Share your thoughts with others">
+                    <h3>Forum</h3>
+                    <p>Have the time to share your thoughts and opinions with experts for each topic.</p>
+                </div>
+                <div class="workshop">
+                    <img src="./assets/screwdriver_318-881772.png" alt="Work with others to build stuff practically ">
+                    <h3>Workshop</h3>
+                    <p>Try exploiting new ways of conquering climate change by examining safer or more efficient energy production techniques.</p>
+                </div>
+                <div class="connect">
+                    <img src="./assets/networking.png" alt="Connect with others">
+                    <h3>Networking</h3>
+                    <p>Get opportunities to network with SOP affiliates around the world, also after the summit.</p>
+                </div>
+            </div>
+            <button class="join-program">Join SOP Summit 2022</button>
+        </section>
+        <section>
+            <h3>Featured Speakers</h3>
+            <div class="first-speaker">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="second-speaker">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="third-speaker">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="fourth-speaker">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="fifth-speaker">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="sixth-speaker">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <button class="more">More</button>
         </section>
 
     </main>
-    <footer>
-
-    </footer>
    <script src="./js/main.js"></script> 
 </body>
 </html>
