Edit nav attributes

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#program"></a>Program</li>
-                <li><a href=""></a>Join</li>
-                <li><a href=""></a>Sponsor</li>
-                <li><a href=""></a>News</li>
-                <li><a href=""></a>SOP Campaign</li>
+                <li><a href="#"></a>Join</li>
+                <li><a href="#"></a>Sponsor</li>
+                <li><a href="#"></a>News</li>
+                <li><a href="#"></a>SOP Campaign</li>
             </ul>
         </nav>
         
