--- a/index.html
+++ b/index.html
@@ -31,53 +31,54 @@
     </header>
     <main>
         <section class="headline">
-            <h1>SOS! Save Our Planet</h1>
-            <h2>CLIMATE CHANGE</h2>
-            <article>
+            <h2 class="home">CLIMATE CHANGE</h2>
+            <h1 class="homeText">SOS! Save Our Planet</h1>        
+            <article class="someText">
                 Global temperatures and sea levels are rising, 
                 and possibly contributing to larger more devastating storms.
                 This can all be contributed to climate change. 
                 Climate change is defined as gradual changes in all the interconnected weather elements on our planet over approximately 30 years. 
                 The data shows the Earth is warming and it's up to us to make the changes necessary for a healthier planet.
             </article>
-            <h2>2022.08.15(MON) ~ 16(TUE)</h2>
-            <p>@ Conference Hall, Paris</p>
+            <h2 class="date">2022.08.15(MON) ~ 16(TUE)</h2>
+            <p class="venue">@ Conference Hall, Paris</p>
         </section>
 
-        <section id="program">
-            <h3>Main Program</h3>
-            <hr>
-            <div class="grid-container">
-                <div class="lecture">
+        <section id="program" class="prog">
+            <h2 class="prog-header">Main Program</h2>
+            <hr class="prog-line">
+            <ul class="row-container">
+                <li class="lecture">
                     <img src="./assets/lecture.png" alt="Lecture Icon on IconScout">
                     <h3>Lecture</h3>
                     <p>Listen to the speakers from various countries about the necessary steps and actions the world has to take in order to fight climate change.</p>
-                </div>
-                <div class="exhibition">
+                </li>
+                <li class="exhibition">
                     <img src="./assets/whiteboard.png" alt="Explaining concepts on a board">
                     <h3>Exhibition</h3>
                     <p>Appreciate various efforts made so far towards the fight against climate change.</p>
-                </div>
-                <div class="forum">
+                </li>
+                <li class="forum">
                     <img src="./assets/speech-bubble.png" alt="Share your thoughts with others">
                     <h3>Forum</h3>
                     <p>Have the time to share your thoughts and opinions with experts for each topic.</p>
-                </div>
-                <div class="workshop">
+                </li>
+                <li class="workshop">
                     <img src="./assets/screwdriver_318-881772.png" alt="Work with others to build stuff practically ">
                     <h3>Workshop</h3>
                     <p>Try exploiting new ways of conquering climate change by examining safer or more efficient energy production techniques.</p>
-                </div>
-                <div class="connect">
+                </li>
+                <li class="connect">
                     <img src="./assets/networking.png" alt="Connect with others">
                     <h3>Networking</h3>
                     <p>Get opportunities to network with SOP affiliates around the world, also after the summit.</p>
-                </div>
-            </div>
+                </li>
+            </ul>
             <button class="join-program">Join SOP Summit 2022</button>
         </section>
-        <section>
+        <section class="speakers" id="">
             <h3>Featured Speakers</h3>
+            <hr class="prog-line">
             <div class="first-speaker">
                 <img src="" alt="">
                 <p></p>
