--- a/index.html
+++ b/index.html
@@ -76,37 +76,136 @@
             </ul>
             <button class="join-program">Join SOP Summit 2022</button>
         </section>
-        <section class="speakers" id="">
-            <h3>Featured Speakers</h3>
+        <section class="talks" id="speakers">
+            <h2 class="subheading">Featured Speakers</h2>
             <hr class="prog-line">
-            <div class="first-speaker">
-                <img src="" alt="">
-                <p></p>
+            <div class="grid-container">
+            
+                <div class="speaker">
+                    <div class="pic-container">
+                        <div class="image-container"><img src="./assets/talk.jpg" alt=""></div>
+                        <span class="square"></span>
+                    </div>
+                    <div class="speaker-info">
+                        <h3>Edward Howell</h3>
+                        <h4>Recognized Geographer and seasoned climatologist. Known for his wonderful works and efforts in fighting climate change</h4>
+                        <hr class="line-dark">
+                        <p>Climate change is defined as gradual changes in all the interconnected weather elements on our planet over approximately 30 years. 
+                            The data shows the Earth is warming and it's up to us to make the changes necessary for a healthier planet.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="speaker">
+                    <div class="pic-container">
+                        <div class="image-container"><img src="./assets/talk.jpg" alt=""></div>
+                        <span class="square"></span>
+                    </div>
+                    <div class="speaker-info">
+                        <h3>Edward Howell</h3>
+                        <h4>Recognized Geographer and seasoned climatologist. Known for his wonderful works and efforts in fighting climate change</h4>
+                        <hr class="line-dark">
+                        <p>Climate change is defined as gradual changes in all the interconnected weather elements on our planet over approximately 30 years. 
+                            The data shows the Earth is warming and it's up to us to make the changes necessary for a healthier planet.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="speaker">
+                    <div class="pic-container">
+                        <div class="image-container"><img src="./assets/talk.jpg" alt=""></div>
+                        <span class="square"></span>
+                    </div>
+                    <div class="speaker-info">
+                        <h3>Edward Howell</h3>
+                        <h4>Recognized Geographer and seasoned climatologist. Known for his wonderful works and efforts in fighting climate change</h4>
+                        <hr class="line-dark">
+                        <p>Climate change is defined as gradual changes in all the interconnected weather elements on our planet over approximately 30 years. 
+                            The data shows the Earth is warming and it's up to us to make the changes necessary for a healthier planet.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="speaker">
+                    <div class="pic-container">
+                        <div class="image-container"><img src="./assets/talk.jpg" alt=""></div>
+                        <span class="square"></span>
+                    </div>
+                    <div class="speaker-info">
+                        <h3>Edward Howell</h3>
+                        <h4>Recognized Geographer and seasoned climatologist. Known for his wonderful works and efforts in fighting climate change</h4>
+                        <hr class="line-dark">
+                        <p>Climate change is defined as gradual changes in all the interconnected weather elements on our planet over approximately 30 years. 
+                            The data shows the Earth is warming and it's up to us to make the changes necessary for a healthier planet.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="speaker">
+                    <div class="pic-container">
+                        <div class="image-container"><img src="./assets/talk.jpg" alt=""></div>
+                        <span class="square"></span>
+                    </div>
+                    <div class="speaker-info">
+                        <h3>Edward Howell</h3>
+                        <h4>Recognized Geographer and seasoned climatologist. Known for his wonderful works and efforts in fighting climate change</h4>
+                        <hr class="line-dark">
+                        <p>Climate change is defined as gradual changes in all the interconnected weather elements on our planet over approximately 30 years. 
+                            The data shows the Earth is warming and it's up to us to make the changes necessary for a healthier planet.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="speaker">
+                    <div class="pic-container">
+                        <div class="image-container"><img src="./assets/talk.jpg" alt=""></div>
+                        <span class="square"></span>
+                    </div>
+                    <div class="speaker-info">
+                        <h3>Edward Howell</h3>
+                        <h4>Recognized Geographer and seasoned climatologist. Known for his wonderful works and efforts in fighting climate change</h4>
+                        <hr class="line-dark">
+                        <p>Climate change is defined as gradual changes in all the interconnected weather elements on our planet over approximately 30 years. 
+                            The data shows the Earth is warming and it's up to us to make the changes necessary for a healthier planet.
+                        </p>
+                    </div>
+                </div>
+
             </div>
-            <div class="second-speaker">
-                <img src="" alt="">
-                <p></p>
-            </div>
-            <div class="third-speaker">
-                <img src="" alt="">
-                <p></p>
-            </div>
-            <div class="fourth-speaker">
-                <img src="" alt="">
-                <p></p>
-            </div>
-            <div class="fifth-speaker">
-                <img src="" alt="">
-                <p></p>
-            </div>
-            <div class="sixth-speaker">
-                <img src="" alt="">
-                <p></p>
-            </div>
+
             <button class="more">More</button>
+
         </section>
 
+        <section class="partner home-partner" id="partners">
+            <h2>Partner</h2>
+            <hr class="line" />
+            <div class="partner-container">
+              <a href="#"><img src="./assets/mozilla.svg" alt="Mozilla firefox logo"></a>
+              <a href="#"><img src="./assets/google.svg" alt="Google logo"></a>
+              <a href="#"><img src="./assets/" alt=""></a>
+              <a href="#"><img src="./assets/" alt=""></a>
+              <a href="#"><img src="./assets/" alt=""></a>
+            </div>
+          </section>
+
     </main>
+
+    <footer class="footer footer-home" id="footer">
+        <img src="./assets/logo.jpg" alt="logo" />
+        <div>
+          <p class="footer-title">
+            2022 SOP Summit Paris, all rights reserved
+          </p>
+          <p class="copyright home-copyright">
+            SOP Summit 2022 works under the Creative Commons license which
+            means that the content provided during the program will be under the
+            same license. Refer to the Creative Commons page to read more about
+            it.
+          </p>
+        </div>
+      </footer>
+
    <script src="./js/main.js"></script> 
 </body>
 </html>
