--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
         <section class="headline">
             <h2 class="about">CLIMATE CHANGE</h2>
             <h1 class="aboutText">SOS! Save Our Planet</h1>        
-            <article class="description">
+            <p class="description">
             The Global Summit brings together the community of experts, academics and activists who comprise the Save Our Planet affiliate network from various countries every two years.
             This year, we hope to expand our invitation list to include organizations and individuals.
-            </article>
+            </p>
             <p class="contact">Please contact us via Email for further questions about the SOP Global Summit 2022!</p>
             <p class="email">sopsummit2022@sopparis.org</p>
         </section>
