Edit image attribute

--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
             </ul>
             <ul class="second-row">
                 <li><a href="#"><img src="./assets/nasa.png" alt="Nasa Logo"></a></li>
-                <li><a href="#"><img src="./assets/apple-logo.png" alt="National Geographic Logo"></a></li>
+                <li><a href="#"><img src="./assets/apple-logo.png" alt="Apple Logo"></a></li>
             </ul>     
             
         </section>
