Update navbar to allow for styling

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="./css/about.css">
     <title>Save Our Planet Global Summit on Climate Change | About</title>
 </head>
@@ -18,8 +19,8 @@
         
         <div class="navbar-nav">
             <ul>
-                <li><img src="./assets/facebook.ico" alt="facebook icon"></li>
-                <li><img src="./assets/twitter.ico" alt="twitter icon"></li>
+                <li><i class="devicon-facebook-plain"></i></li>             
+                <li><i class="devicon-twitter-original"></i></li>
                 <li><a href="#">English</a></li>
                 <li><a href="#">My Page</a></li>
                 <li><a href="#">Logout</a></li>
@@ -33,11 +34,11 @@
 
             <ul>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#program"></a>Program</li>
-                <li><a href="#"></a>Join</li>
-                <li><a href="#"></a>Sponsor</li>
-                <li><a href="#"></a>News</li>
-                <li><a href="#"></a>SOP Campaign</li>
+                <li><a href="#program">Program</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Sponsor</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#" id="border">SOP Campaign</a></li>
             </ul>
         </nav>
         
