Update file to allow for desktop version build

--- a/about.html
+++ b/about.html
@@ -48,9 +48,16 @@
         <section class="headline">
             <h2 class="about">CLIMATE CHANGE</h2>
             <h1 class="aboutText">SOS! Save Our Planet</h1>        
+            <h1 class="about-header">save our planet global summit on climate change 2022</h1>
             <p class="description">
             The Global Summit brings together the community of experts, academics and activists who comprise the Save Our Planet affiliate network from various countries every two years.
             This year, we hope to expand our invitation list to include organizations and individuals.
+            </p>
+            <hr class="desk-line">
+            <p class="desktop-description">The Global Summit brings together the community of experts, academics and activists who comprise the Save Our Planet affiliate network from various countries every two years.
+            This year, we hope to expand our invitation list to include organizations and individuals who want to work with us on shared projects that advance the cause of our mission; combatting climate change. 
+            So, if you are active and engaged in the worlds of open content and knowledge - free software advocates, Wikipedians, open-knowledge, galleries, libraries, museums, archives, governments and foundations, 
+            lawyers and activists. We hope you will consider joining us this year to build a stronger, more vibrant and safe world together.
             </p>
             <p class="contact">Please contact us via Email for further questions about the SOP Global Summit 2022!</p>
             <p class="email">sopsummit2022@sopparis.org</p>
@@ -59,7 +66,11 @@
         <section class="about-logo">
             <h2>Save Our Planet Global Summit 2022 Logo</h2>
             <hr class="line">
-            <p>The logo of SOP Global Summit 2022 was decided through the logo competition from June 8 to July 7.</p>
+            <p class="logoText">The logo of SOP Global Summit 2022 was decided through the logo competition from June 8 to July 7.</p>
+            <p class="desk-text">The logo of SOP Global Summit 2022 was decided through the logo competition from June 8 to July 7. 
+            After searching for logo makers online, the logo was finally made using Adobe's online logo maker. After customizing the logo, 
+            we optimized the logo for this year's summit as following:
+            </p>
             <div class="logoHolder">
                 <img src="./assets/soplogo.png" alt="SOP logo">
             </div>
@@ -115,6 +126,9 @@
           </p>
           <p class="copyright">
             Some rights reserved
+          </p>
+          <p id="rights">SOP Global Summit 2022 works under the SOP license which means that the content provided during the program will be under the same license. 
+            Refer to the SOP page to read more about it.
           </p>
         </div>
     </footer>
