--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
     <main>
         <section class="headline">
-            <h2 class="home">CLIMATE CHANGE</h2>
+            <h2 class="home">Climate Change</h2>
             <h1 class="homeText">SOS! Save Our Planet</h1>        
+            <h1 class="home-header">save our planet global summit 2022</h1>
             <p class="someText">
                 Global temperatures and sea levels are rising, 
                 and possibly contributing to larger more devastating storms.
@@ -55,6 +56,10 @@
                 Climate change is defined as gradual changes in all the interconnected weather elements on our planet over approximately 30 years. 
                 The data shows the Earth is warming and it's up to us to make the changes necessary for a healthier planet.
             </p>
+            <p class="h-text">A joyful celebration believing in the value of openness and sharing, creating a positive change with people from 
+                over 80 countries is taking place in August, in Paris.
+            </p>
+
             <h2 class="date">2022.08.15(MON) ~ 16(TUE)</h2>
             <p class="venue">@ Conference Hall, Paris</p>
         </section>
@@ -66,30 +71,31 @@
                 <li class="lecture">
                     <img src="./assets/lecture.png" alt="Lecture Icon on IconScout">
                     <h3>Lecture</h3>
-                    <p>Listen to the speakers from various countries about the necessary steps and actions the world has to take in order to fight climate change.</p>
+                    <p>Listen to popular speakers from various countries about the next steps and necessary actions the world has to take to fight climate change.</p>
                 </li>
                 <li class="exhibition">
                     <img src="./assets/whiteboard.png" alt="Explaining concepts on a board">
                     <h3>Exhibition</h3>
-                    <p>Appreciate various efforts made so far towards the fight against climate change.</p>
+                    <p>Appreciate various efforts made so far towards the fight against climate change. Showcase marvelous works in that light.</p>
                 </li>
                 <li class="forum">
                     <img src="./assets/speech-bubble.png" alt="Share your thoughts with others">
                     <h3>Forum</h3>
-                    <p>Have the time to share your thoughts and opinions with experts for each topic.</p>
+                    <p>Have the time to share your thoughts and opinions with experts for each topic. Ask and answer popular questions.</p>
                 </li>
                 <li class="workshop">
                     <img src="./assets/screwdriver_318-881772.png" alt="Work with others to build stuff practically ">
                     <h3>Workshop</h3>
-                    <p>Try exploiting new ways of conquering climate change by examining safer or more efficient energy production techniques.</p>
+                    <p>Examine new ways of conquering climate change by checking for safer or more efficient energy production techniques.</p>
                 </li>
                 <li class="connect">
                     <img src="./assets/networking.png" alt="Connect with others">
                     <h3>Networking</h3>
-                    <p>Get opportunities to network with SOP affiliates around the world, also after the summit.</p>
+                    <p>Get amazing opportunities to network with SOP affiliates around the world, also after the summit. Work better together.</p>
                 </li>
             </ul>
             <button type="button" class="join-program">Join SOP Summit 2022</button>
+            <div class="see-more" type="button">see the whole program</div>
         </section>
 
         <section class="talks" id="speakers">
@@ -184,31 +190,28 @@
         <section class="partner home-partner" id="partners">
             <h2>Partner</h2>
             <hr class="line">
-            <div class="partner-container">
-              <a href="#"><img src="./assets/mozilla.ico" alt="Mozilla Firefox Logo"></a>
-              <a href="#"><img src="./assets/google.ico" alt="Google Logo"></a>
-              <a href="#"><img src="./assets/nasa.png" alt="Nasa Logo"></a>
-              <a href="#"><img src="./assets/apple-logo.png" alt="Apple Logo"></a>
-              <a href="#"><img src="./assets/airbnb.ico" alt="Airbnb Logo"></a>
+            <div class="first-row">
+                <a href="#"><img src="./assets/mozilla.ico" alt="Mozilla Firefox Logo"></a>
+                <a href="#"><img src="./assets/google.ico" alt="Google Logo"></a>
+                <a href="#"><img src="./assets/airbnb.ico" alt="Airbnb Logo"></a>
+                <a href="#" class="second-row"><img src="./assets/nasa.png" alt="Nasa Logo"></a>
+                <a href="#" class="second-row"><img src="./assets/apple-logo.png" alt="Apple Logo"></a>
             </div>
         </section>
 
     </main>
 
-    <footer class="footer footer-home" id="footer">
+    <footer class="footer" id="footer">
         <img src="./assets/soplogo.png" alt="logo">
         <div>
           <p class="footer-title">
-            2022 SOP Summit Paris, all rights reserved
+            2022 SOP Summit Paris. Some rights reserved 
           </p>
-          <p class="copyright home-copyright">
-            SOP Summit 2022 works under the Creative Commons license which
-            means that the content provided during the program will be under the
-            same license. Refer to the Creative Commons page to read more about
-            it.
+          <p id="rights">SOP Global Summit 2022 works under the SOP license which means that the content provided during the program will be under the same license. 
+            Refer to the SOP page to read more about it.
           </p>
         </div>
-      </footer>
+    </footer>
 
    <script src="./js/main.js"></script> 
 </body>
