Fix linter errors

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </li>
             </ul>
             <button type="button" class="join-program">Join SOP Summit 2022</button>
-            <div class="see-more" type="button">see the whole program</div>
+            <div class="see-more">see the whole program</div>
         </section>
 
         <section class="talks" id="speakers">
