--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
             <div class="bar2"></div>
             <div class="bar3"></div>
         </div>
+
+        <nav class="mobile-nav">
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#program">Program</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Sponsor</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">SOP Campaign</a></li>
+            </ul>
+        </nav>
         
         <div class="navbar-nav">
             <ul>
@@ -102,85 +113,6 @@
             <h2 class="subheading">Featured Speakers</h2>
             <hr class="prog-line">
             <div class="grid-container">
-            
-                <div class="speaker">
-                    <div class="pic-container">
-                        <div class="image-container"><img src="./assets/speaker5.jpg" alt=""></div>
-                        <span class="square"></span>
-                    </div>
-                    <div class="speaker-info">
-                        <h3>Xavier Leclerc</h3>
-                        <h4>Climate change researcher</h4>
-                        <hr class="line-dark">
-                        <p>We have to try to use more environment-friendly energy sources.</p>                      
-                    </div>
-                </div>
-
-                <div class="speaker">
-                    <div class="pic-container">
-                        <div class="image-container"><img src="./assets/talk.jpg" alt=""></div>
-                        <span class="square"></span>
-                    </div>
-                    <div class="speaker-info">
-                        <h3>Edward Howell</h3>
-                        <h4>Recognized Geographer and seasoned climatologist.</h4>
-                        <hr class="line-dark">
-                        <p>Climate change is defined as gradual changes in all the interconnected weather elements on our planet over approximately 30 years.</p>  
-                    </div>
-                </div>
-
-                <div class="speaker">
-                    <div class="pic-container">
-                        <div class="image-container"><img src="./assets/speaker1.jpg" alt=""></div>
-                        <span class="square"></span>
-                    </div>
-                    <div class="speaker-info">
-                        <h3>Askas Jeremy</h3>
-                        <h4>Climate change activist.</h4>
-                        <hr class="line-dark">
-                        <p>The data shows the Earth is warming and it's up to us to make the changes necessary for a healthier planet.</p>                   
-                    </div>
-                </div>
-
-                <div class="speaker">
-                    <div class="pic-container">
-                        <div class="image-container"><img src="./assets/speaker3.jpg" alt=""></div>
-                        <span class="square"></span>
-                    </div>
-                    <div class="speaker-info">
-                        <h3>M.T ElGassier</h3>
-                        <h4>Lead researcher at NASA and seasoned climatologist</h4>
-                        <hr class="line-dark">
-                        <p>We are committed to try and limit the on-going damage caused by climate change.</p>                     
-                    </div>
-                </div>
-
-                <div class="speaker">
-                    <div class="pic-container">
-                        <div class="image-container"><img src="./assets/speaker4.jpg" alt=""></div>
-                        <span class="square"></span>
-                    </div>
-                    <div class="speaker-info">
-                        <h3>Dr Josiah Sarpong</h3>
-                        <h4>Director at the European observatory of climate change</h4>
-                        <hr class="line-dark">
-                        <p>Climate change is defined as gradual changes in all the interconnected weather elements on our planet over approximately 30 years.</p>                                              
-                    </div>
-                </div>
-
-                <div class="speaker">
-                    <div class="pic-container">
-                        <div class="image-container"><img src="./assets/speaker2.jpg" alt=""></div>
-                        <span class="square"></span>
-                    </div>
-                    <div class="speaker-info">
-                        <h3>Mike Erskine</h3>
-                        <h4>Teacher at College of Arts and Science</h4>
-                        <hr class="line-dark">
-                        <p>It's our duty to educate the younger generation about the consquences of certain actions on the global change in climate.</p>                     
-                    </div>
-                </div>
-
             </div>
 
             <button type="button" class="more">More</button>
