--- a/about.html
+++ b/about.html
@@ -16,6 +16,17 @@
             <div class="bar2"></div>
             <div class="bar3"></div>
         </div>
+
+        <nav class="mobile-nav">
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#program">Program</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Sponsor</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">SOP Campaign</a></li>
+            </ul>
+        </nav>
         
         <div class="navbar-nav">
             <ul>
