--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
         <nav class="mobile-nav">
             <ul>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#program">Program</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Sponsor</a></li>
