--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             </div>
 
             <ul>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#program">Program</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Sponsor</a></li>
